Bug 522137: Remove macro recorder toolbar button
  allows to remove obsolete code from codeFactory

Change-Id: I9ecd3c74cf0153f8f82f29475f136066cd25ca6f